--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "6",
+    "sass": "^1.62.0",
+    "scss": "^0.2.4",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
